<resources>
    <string name="app_name">My Phone And I</string>
    <string name="stop_service">Stop This Service</string>
    <string name="start_service">Start Service</string>
    <string name="analog_clock_content_description">A cool representation of the time for noting when you opened the phone</string>
    <string name="unlock_list_description">A list to show you how many unlocks, Wow such empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="on_boarding_done">Done!</string>
    <string name="on_boarding_done_text_permission_given">Thanks! \n Enjoy the application.</string>
    <string name="on_boarding_done_text_permission_denied">That is OK :) \n you can always change your mind later. \n keep in mind that the application will not run as smoothly. \n Enjoy the application.</string>
    <string name="move_to_app">Lets go</string>
    <string name="welcome"> Welcome!</string>
    <string name="welcome_text">Thank you for downloading this app. \n In order to make this application run smoothly we ask you to enable the application with some permissions.</string>
    <string name="battery_optimization_permission">battery optimization</string>
    <string name="battery_optimization_explanation">Please mark this application to be excluded from battery optimization. \n This will make the application run until you decide to stop</string>
    <string name="button_enable_battery_optimization">Enable</string>
    <string name="button_skip_permission_battery_optimization">Skip</string>
    <string name="show_me_how">show me how</string>
    <string name="nav_header_title">navigation text</string>
    <string name="about">about</string>
    <string name="wow_such_empty">WOW SUCH EMPTY</string>
    <string name="health_page_about">This is the health page. \n The health page is a way to physically feel the usage on the phone, it is an option for you. \n If you want - you will be able can choose to feel every 5 unlocks or every 5 minutes on the phone as one push up.</string>
    <string name="profile_page_about">This will be the profile page. \n Here you will be able to see insights on your phone usage and your statistics</string>
    <string name="about_application">
        Thank you for using my application. \n
        My name is Michael Millich, I am an aspiring programmer at night, mechanical engineer by day. \n
        I am making this application as a project for me to learn to program. \n
        The goal of this application is to be an open source code version of the wellnessbeing app by google. \n
        If you have any questions , feel free to write to my email michael.milich1@gmail.com \n
        \n
        P.S. I know that the picture is Doge, i will place my own picture once i find a cool one :)
    </string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="background_service_run">background_service_run</string>
    <string name="background_service_off_summary">The app will not collect new data</string>
    <string name="background_service_on_summary">The service is running</string>
    <string name="background_service_run_title">Enable background service to run</string>
    <string name="background_service_run_battery_optimization">background_service_run_battery_optimization</string>
    <string name="background_service_run_battery_optimization_off_summary">The app might stop working from time to time due to android battery optimization</string>
    <string name="background_service_run_battery_optimization_on_summary">The service is running and is excluded from battery optimization</string>
    <string name="background_service_run_battery_optimization_title">Let the service run indefinitely</string>
    <string name="refresh">refresh</string>
    <string name="show_notification_key">show_notification_key</string>
    <string name="background_service_notification_summaryOn">The service is able to send notification, you will be able to see each notification even while the app is close and the service is running</string>
    <string name="background_service_notification_summaryOff">There will be no visual indication if the service is running in the background while the app is closed, the service might be running and it might not</string>
    <string name="background_service_notification_title">Let the service show notifications</string>
    <string name="usage_stats_permissions_key">usage_stats_permissions_key</string>
    <string name="throw_exception">throw exception</string>
    <string name="usage_status_permiision_off_summary">The application will not know how you use your phone, it will still show when you used your phone</string>
    <string name="usage_Status_permissions_on_summary">The application will save your data on how you use your applications and provide reports</string>
    <string name="usage_status_permissions_tittle">Let this application see usage of other applications</string>

</resources>