<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Background Service">

        <SwitchPreferenceCompat
            app:key="@string/background_service_run"
            app:summaryOff="@string/background_service_off_summary"
            app:summaryOn="@string/background_service_on_summary"
            app:title="@string/background_service_run_title" />

        <SwitchPreferenceCompat
            app:dependency="@string/background_service_run"
            app:key="@string/background_service_run_battery_optimization"
            app:summaryOff="@string/background_service_run_battery_optimization_off_summary"
            app:summaryOn="@string/background_service_run_battery_optimization_on_summary"
            app:title="@string/background_service_run_battery_optimization_title" />

        <SwitchPreferenceCompat
            app:key="@string/show_notification_key"
            app:summaryOff="@string/background_service_notification_summaryOff"
            app:summaryOn="@string/background_service_notification_summaryOn"
            app:title="@string/background_service_notification_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="phone info">
        <SwitchPreferenceCompat
            app:key="@string/usage_stats_permissions_key"
            app:summaryOff="@string/usage_status_permiision_off_summary"
            app:summaryOn="@string/usage_Status_permissions_on_summary"
            app:title="@string/usage_status_permissions_tittle" />
    </PreferenceCategory>

</PreferenceScreen>